2006-05-09  David Reveman  <davidr@novell.com>

	* hw/xgl/xglxv.c (xglXvPutImage): Stride should be padded to a
	multiple of 8.

2006-05-05  David Reveman  <davidr@novell.com>

	* hw/xgl/glx/xglx.c (xglxKbdCtrl): No need to go through more than
	the first 4 leds.
	(xglxKeybdProc): Turn off automatic indicator changes and make
	sure audible bell is turned on.

2006-04-26  David Reveman  <davidr@novell.com>

	* hw/xgl/glx/xglx.c: Fix SetCursorPosition, events were not generated
	correctly.

2006-04-24  David Reveman  <davidr@novell.com>

	* fb/fbcompose.c (fbFetchTransformed): Fix convolution kernel offsets.

2006-04-19  David Reveman  <davidr@novell.com>

	* hw/xgl/glx/xglx.c: Pass display offset to xglxInitXorg.

	* hw/xgl/glx/xglx.h:
	* hw/xgl/glx/xglxorg.c: Use offset for xorg display so that more than
	one server can be started.

2006-04-18  David Reveman  <davidr@novell.com>

	* fb/fbmmx.c (fbCompositeSrc_yv12x8888mmx): Translate U, V start
	pointers correctly and set srcEnd correctly.

2006-04-13  David Reveman  <davidr@novell.com>

	* hw/xgl/xglparse.c (xglProcessArgument, xglUseMsg):
	* hw/xgl/xglxv.c:
	* hw/xgl/egl/xeglinit.c:
	* hw/xgl/glx/xglxinit.c:
	* hw/xgl/xglinit.c:
	* hw/xgl/xglscreen.c (xglScreenInit):
	* hw/xgl/xgl.h: Add xvfilter and noyuv options. xvfilter can be used
	to set the filter used for XVideo, currently available filters are
	nearest and linear (default is linear). Nearest filter can improve
	performance signifcantly when XVideo isn't accelerated. noyuv
	option can be used to force use of software YUV to RGB conversions,
	which can improve performance when GL_ARB_fragment_program support
	isn't fast enough.

	* fb/fbpict.c (fbComposite):
	* fb/fbmmx.h:
	* fb/fbmmx.c: Add fast YUV conversion code.

2006-04-10  David Reveman  <davidr@novell.com>

	* fb/fb.h (fbGetDrawable): Don't lose sign on stride.

	* fb/fbcompose.c (fbFetchTransformed): Shift down after multiplication
	with filter parameters that are be in 16.16 fixed point.
