@@ -1,3 +1,8 @@
+2006-05-10  David Reveman  <davidr@novell.com>
+
+	* hw/xgl/xglcompose.c (xglCompositeGeneral): Only use copy optimization
+	when source picture got a drawable.
+
 2006-05-09  David Reveman  <davidr@novell.com>
 
 	* hw/xgl/xglxv.c (xglXvPutImage): Stride should be padded to a
